--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -15,15 +15,37 @@ jobs:
     - name: 检出代码
       uses: actions/checkout@v4
       
-    - name: 设置 JDK 11
+    - name: 设置 JDK 17
       uses: actions/setup-java@v4
       with:
-        java-version: '11'
+        java-version: '17'
         distribution: 'temurin'
         
     - name: 设置 Android SDK
-      uses: android-actions/setup-android@v3
-      
+      run: |
+        # 设置 Android SDK 环境变量
+        export ANDROID_HOME=$HOME/android-sdk
+        export PATH=$PATH:$ANDROID_HOME/cmdline-tools/latest/bin
+        export PATH=$PATH:$ANDROID_HOME/platform-tools
+        
+        # 创建 SDK 目录
+        mkdir -p $ANDROID_HOME/cmdline-tools
+        
+        # 下载并安装 Android SDK Command Line Tools
+        cd $ANDROID_HOME/cmdline-tools
+        wget -q https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
+        unzip -q commandlinetools-linux-9477386_latest.zip
+        mv cmdline-tools latest
+        
+        # 接受许可证并安装必要的 SDK 组件
+        yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses
+        $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-34" "build-tools;34.0.0"
+        
+        # 设置环境变量到 GitHub Actions 环境
+        echo "ANDROID_HOME=$ANDROID_HOME" >> $GITHUB_ENV
+        echo "$ANDROID_HOME/cmdline-tools/latest/bin" >> $GITHUB_PATH
+        echo "$ANDROID_HOME/platform-tools" >> $GITHUB_PATH
+        
     - name: 缓存 Gradle 依赖
       uses: actions/cache@v4
       with:
@@ -36,7 +58,8 @@ jobs:
           
     - name: 创建 Gradle Wrapper
       run: |
-        gradle wrapper
+        # 使用 Gradle 8.0 创建 wrapper
+        gradle wrapper --gradle-version 8.0
         
     - name: 赋予 gradlew 执行权限
       run: chmod +x gradlew
@@ -75,7 +98,7 @@ jobs:
                 mavenCentral()
             }
             dependencies {
-                classpath 'com.android.tools.build:gradle:7.4.2'
+                classpath 'com.android.tools.build:gradle:8.1.4'
             }
         }
         
@@ -100,9 +123,12 @@ jobs:
         cat > gradle.properties << 'EOF'
         android.useAndroidX=true
         android.enableJetifier=true
-        org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+        org.gradle.jvmargs=-Xmx4g -Dfile.encoding=UTF-8
         org.gradle.parallel=true
         org.gradle.caching=true
+        android.nonTransitiveRClass=false
+        android.defaults.buildfeatures.buildconfig=true
+        android.nonFinalResIds=false
         EOF
         
     - name: 创建本地属性文件
