--- a/.github/workflows/mini-build.yml
+++ b/.github/workflows/mini-build.yml
@@ -138,7 +138,7 @@ jobs:
     - name: 构建Debug APK
       run: |
         echo "开始构建APK..."
-        ./gradlew :mini-app:assembleDebug --stacktrace --info --no-daemon
+        ./gradlew assembleDebug --stacktrace --info --no-daemon
         
     - name: 查找生成的APK
       run: |
@@ -149,6 +149,9 @@ jobs:
         ls -la mini-app/build/outputs/ || echo "outputs目录不存在"
         ls -la mini-app/build/outputs/apk/ || echo "apk目录不存在"  
         ls -la mini-app/build/outputs/apk/debug/ || echo "debug目录不存在"
+        
+        echo "=== 完整构建目录结构 ==="
+        find mini-app/build -type f -name "*.apk" || echo "没有找到APK文件"
         
     - name: 上传APK文件
       uses: actions/upload-artifact@v4
