--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,9 +30,23 @@
             android:exported="false"
             android:launchMode="singleTop"
             android:theme="@style/AlarmTheme" />
+            
+        <activity
+            android:name=".TestAlarmActivity"
+            android:exported="true"
+            android:label="测试闹钟">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <receiver
             android:name=".AlarmReceiver"
+            android:exported="false" />
+            
+        <receiver
+            android:name=".TestAlarmActivity$TestAlarmReceiver"
             android:exported="false" />
 
         <receiver
