--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,27 +17,17 @@ jobs:
       with:
         fetch-depth: 0  # 获取完整历史记录以便正确生成版本号
     
-      - name: 设置JDK 11
-        uses: actions/setup-java@v4
-        with:
-          java-version: '11'
-          distribution: 'temurin'
-        cache: gradle
+    - name: 设置JDK 11并缓存Gradle
+      uses: actions/setup-java@v4
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+        cache: 'gradle'
     
     - name: 设置Gradle
       uses: gradle/gradle-build-action@v2
       with:
         gradle-version: 8.2
-    
-    - name: 缓存Gradle包
-      uses: actions/cache@v3
-      with:
-        path: |
-          ~/.gradle/caches
-          ~/.gradle/wrapper
-        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-        restore-keys: |
-          ${{ runner.os }}-gradle-
     
     - name: 构建Debug APK
       run: gradle assembleDebug
@@ -66,8 +56,6 @@ jobs:
         name: 圣经闹钟-release
         path: app/build/outputs/apk/release/app-release.apk
         if-no-files-found: error
-    
-    # 移除JaCoCo测试报告构建，因为项目可能没有配置JaCoCo
     
     - name: 上传测试报告
       if: always()
